# tasks_stack

./: .gitignore  CMakeLists.txt  README.md  backup_cmake.txt  bask_up.txt
include/: color.cpp  color.hpp  command.cpp  command.hpp  model.cpp  model.hpp  print_stack.cpp  print_stack.hpp  stack.cpp  stack.hpp  task.hpp  view.cpp  view.hpp  viewmodel.cpp  viewmodel.hpp
src/: main.cpp
